--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "rewrites": [
         {
-            "source": "/(.*)",
+            "source": "/((?!assets/|sitemap.xml|robots.txt|favicon.ico|manifest.json).*)",
             "destination": "/index.html"
         }
     ]
