--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^19.2.0",
     "react-helmet-async": "^2.0.5",
     "react-quill-new": "^3.6.0",
-    "react-router-dom": "6.22.3"
+    "react-router-dom": "6.22.3",
+    "vite-plugin-sitemap": "^0.8.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
